build/testuserdir/var/cache/index/s1/errors/1/vendor/phpunit/phpunit/tests/_files/phpt-for-coverage.phpt.warn
WARNING:9:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	End of File
